# snakers

./: Cargo.toml  README.md
env/: Containerfile  build.sh  run.sh
snakers/: Cargo.toml
snakers-cli/: Cargo.toml
snakers-cli/src/: main.rs
snakers-sdl2/: Cargo.toml
snakers-sdl2/src/: main.rs  textures.rs
snakers/src/: coord.rs  direction.rs  game.rs  inputtype.rs  lib.rs  pair.rs
src/: cli.rs  lib.rs  sdl.rs  snake.rs  snakers_sdl2.rs  textures.rs
src/scratch/: textures.rs
