[package]
name = "prj"
version = "0.1.0"
edition = "2021"
default-run = "snakers-sdl"

[lib]
name = "snake"
path = "src/snake.rs"

[[bin]]
name = "snakers-cli"
path = "src/cli.rs"

[[bin]]
name = "snakers-sdl"
path = "src/sdl.rs"

[[bin]]
name = "textures"
path = "src/textures.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
rand = "0.8.5"
string-builder = "0.2.0"

[dependencies.sdl2]
version = "0.36.0"
default-features = false
features = ["ttf", "gfx"]
