[package]
name = "snakers-sdl2"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snakers = { path = "../snakers" }

[dependencies.sdl2]
version = "0.36.0"
default_features = false
features = ["ttf", "gfx"]
